# baal

./: .gitmodules  .travis.yml  Cargo.toml  README.md  THOUGHTS.md  TODO.md
examples/: usage.rs
src/: lib.rs  music.rs
src/effect/: mod.rs  persistent.rs  short.rs
src/sndfile/: Cargo.toml  README.md  ffi.rs  mod.rs
src/source/: amplify_ctrl.rs  fade_out_ctrl.rs  mod.rs  play_pause_ctrl.rs  wait.rs
tests/: channel_conv.rs  init_close.rs  music_stop.rs  music_transition.rs  persistent_effect.rs  reset.rs  short_effect.rs  test.rs
