[package]
name = "baal"
version = "0.3.1"
authors = ["thiolliere <guillaume.thiolliere@opmbx.org>"]
license = "MIT OR Apache-2.0"
description = "high level audio library"
documentation = "https://thiolliere.org/doc/baal_doc/baal/index.html"
repository = "https://github.com/thiolliere/baal"
readme = "README.md"
keywords = ["audio","simple","game","basic","sound"]

[dependencies]
rustc-serialize = "0.3.0"
libc = "0.2.0"
portaudio = "0.7.0"

